Clean starting point for development of the controller